--- a/sudoku1.css
+++ b/sudoku1.css
@@ -20,7 +20,7 @@ td {
   border-width: 2px;
   position: relative;
   margin:auto;
-  box-shadow: 10px 10px 5px ;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .cell {
   height: 50px;
@@ -31,6 +31,8 @@ td {
   text-align: center;
   vertical-align:middle;
   font-family:  sans-serif;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+
 }
 
 .center {
